force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>This field maintain the remarks for any failure or successful processing of AP Payment Processing.</description>
    <inlineHelpText>This field maintain the remarks for any failure or successful processing of AP Payment Processing.</inlineHelpText>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>