force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/Text_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Payment_Date__c</fullName>
    <label>Text Payment Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>