force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/Vendor_code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_code__c</fullName>
    <label>Vendor Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>