force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Void_Date__c</fullName>
    <label>Void Date</label>
    <type>Date</type>
</CustomField>