force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>